# third_laba_oop

./: CMakeLists.txt
src/: Figure.cpp  Figure.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
tests/: tests.cpp
